[package]
name = "my-todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
axum = "0.7.4"
hyper = "1.1.0"
mime = "0.3.17"
serde = "1.0.196"
serde_json = "1.0.113"
thiserror = "1.0.56"
tokio = "1.36.0"
tower = "0.4.13"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
